# JSONTestSuite

./: .gitignore  build_rust_tests.sh  myparsers.json  run_tests.py  run_tests.sh
parsers/test_json-aws_smithy_json/: Cargo.toml
parsers/test_json-aws_smithy_json/src/: main.rs
results/: logs.txt  parsing.html  parsing_pruned.html
