[package]
name = "test_json-aws_smithy_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-smithy-json = { path = "~/smithy-rs/rust-runtime/aws-smithy-json" }


[[bin]]
name = "rj"
path = "src/main.rs"
